# edgeai-android

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/edgeaivoice/: MainActivity.kt
app/src/main/java/com/edgeaivoice/audio/: AudioCaptureEngine.kt
app/src/main/java/com/edgeaivoice/jni/: AsrResult.kt  AssetsModelInstaller.kt  LlmGenConfig.kt  LlmStats.kt  LlmTokenCallback.kt  NativeBridge.kt  NativeErrorCode.kt  NativeRuntimeLoader.kt  RuntimeConfig.kt  RuntimeModelResolver.kt
app/src/main/java/com/edgeaivoice/metrics/: SessionMetrics.kt  SessionMetricsRecorder.kt
app/src/main/java/com/edgeaivoice/pipeline/: PromptBuilder.kt  VoiceEvent.kt  VoicePipelineCoordinator.kt  VoiceState.kt
app/src/main/java/com/edgeaivoice/policy/: AdaptiveQualityPolicy.kt  ThermalStatusReader.kt
app/src/main/java/com/edgeaivoice/ui/: SectionTitle.kt
core-jni/: README.md
docs/: ExecutionPlan.md  Milestone3Validation.md  ModuleDesignAndDefinitions.md  ProductDefination.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: import_runtime.ps1  import_runtime.sh  m3_regression.sh  push_models.ps1  push_models.sh  push_runtime.ps1  push_runtime.sh  verify_runtime.ps1  verify_runtime.sh
